# rust-serverless-examples

./: .gitignore  Cargo.toml  README.md
project/: README.md
rust-api-gateway-v1/: README.md  package.json
rust-api-gateway-v1-2/: README.md  package.json  serverless.yml
rust-api-gateway-v1-2/functions/api/: Cargo.toml
rust-api-gateway-v1-2/functions/api/src/: main.rs
rust-api-gateway-v1/functions/api/: Cargo.toml
rust-api-gateway-v1/functions/api/src/: main.rs
rust-api-gateway-v2/: README.md  package.json  serverless.yml
rust-api-gateway-v2-sqs/: README.md  package.json  serverless.local.yml  serverless.yml
rust-api-gateway-v2-sqs-2/: README.md  package.json  serverless.local.yml  serverless.yml
rust-api-gateway-v2-sqs-2/functions/api/: .env.example  Cargo.toml
rust-api-gateway-v2-sqs-2/functions/api/src/: lib.rs  main.rs
rust-api-gateway-v2-sqs/functions/api/: Cargo.toml
rust-api-gateway-v2-sqs/functions/api/src/: main.rs
rust-api-gateway-v2-sqs/functions/queue/: Cargo.toml
rust-api-gateway-v2-sqs/functions/queue/src/: main.rs
rust-api-gateway-v2/functions/api/: .env.example  Cargo.toml
rust-api-gateway-v2/functions/api/src/: main.rs
rust-lambda/: README.md  package.json  serverless.yml
rust-lambda-sqs/: README.md  serverless.yml
rust-lambda-sqs/functions/api/: Cargo.toml
rust-lambda-sqs/functions/api/src/: main.rs
rust-lambda/functions/api/: Cargo.toml
rust-lambda/functions/api/src/: main.rs
